[package]
name = "parslay"
description = "Powerful, Adjustable RS LAYout. Or Platform-Agnostic RS LAYout"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rendering
lite-graphics = { path = "lite-graphics", default-features = false }
ab_glyph = "0.2"
floem_reactive = "0.2"

[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
# Window systems
x11rb = { version = "0.13", features = ["image"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
xkbcommon-rs = { git = "https://github.com/wysiwys/xkbcommon-rs", rev = "934c85f", features = [
    "client",
] }

# System libraries
nix = { version = "0.29", features = ["mman", "fs", "feature"] }
fontconfig = "0.9"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }
heck = "0.5"

[workspace]
members = ["./lite-graphics"]
